--- a/style.css
+++ b/style.css
@@ -33,13 +33,17 @@ h1 {
 
 .main {
     display: grid;
-    grid-template-columns: 10% 90%; /* Auto for d1, 1fr for the rest */
+    grid-template-columns: 15% 85%; /* Auto for d1, 1fr for the rest */
     grid-template-rows: 20% 80%;
 }
 
 nav {
     grid-column: 1;
     grid-row: 1;
+    display: flex;
+    flex-direction: column;
+
+
 }
 
 section {
@@ -85,7 +89,6 @@ h2 {
 }
 
 .bouton {
-
     border: 0;
     line-height: 2.5;
     padding: 0 20px;
@@ -98,6 +101,24 @@ h2 {
     position: relative;
     display: inline-block;
     float: right;
+}
+.boutonNav {
+
+    flex: max-content;
+    max-width: 100%;
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background: linear-gradient(180deg, rgba(78, 181, 186, 73) 0%, rgba(42, 241, 250, 98) 100%);
+    position: relative;
+    display: inline-block;
+    width: 100%;
+
 }
 
 .page {
